# pyshortner

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest
.kimchi/docs/: redis_auth_patterns.md
.kimchi/ferments/: 019ef365-6b8b-7447-a9fb-4f85fb02502c.events.jsonl  019ef365-6b8b-7447-a9fb-4f85fb02502c.json
.kimchi/ferments/019ef365-6b8b-7447-a9fb-4f85fb02502c/escalations/: phase-phase-1.json  phase-phase-2.json
.kimchi/ferments/019ef365-6b8b-7447-a9fb-4f85fb02502c/reviews/: phase-phase-1-1.json  phase-phase-1-2.json  phase-phase-2-1.json  phase-phase-2-2.json  phase-phase-3-1.json  phase-phase-3-2.json
backend/app/: main.py
backend/app/api/: auth.py  routes.py
backend/app/core/: config.py  database.py  redis.py  security.py
backend/app/models/: url.py
backend/app/schemas/: auth.py  url.py
frontend/: package-lock.json  package.json
frontend/components/: Layout.tsx
frontend/lib/: api.ts
frontend/pages/: [short_code].tsx  _app.tsx  dashboard.tsx  index.tsx  login.tsx  register.tsx
frontend/pages/analytics/: [short_code].tsx
tests/: conftest.py  test_auth.py  test_shortener.py
