[tool.fastapi]
entrypoint = "backend.app.main:app"

[project]
name = "py-shortner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.10.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-multipart>=0.0.20",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.50",
]
